--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-native": "0.72.5"
   },
   "devDependencies": {
