--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "axios": "^1.5.1",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
