--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.72.5",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-vector-icons": "^10.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
