--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.5.1",
+    "credit-card-type": "^9.1.0",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
