--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^23.5.1",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-i18next": "^13.3.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
