--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.0",
     "react-native": "0.72.5",
+    "react-native-image-picker": "^7.0.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
