--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.5.1",
     "credit-card-type": "^9.1.0",
     "i18next": "^23.5.1",
@@ -26,6 +27,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^9.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
